Added Asp.Net Identity

--- a/MultiLayer.Presentation/Views/Shared/_Layout.cshtml
+++ b/MultiLayer.Presentation/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Authors", "Index", "Author")</li>
                     <li>@Html.ActionLink("Posts", "Index", "Post")</li>
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
